@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

left to right direction

MealPlan --> Diet
HealthyFoodServiceImpl *-- HealthyFoodService

class Meal {
+id: Long
+title: String
+readyInMinutes: Integer
+servings: Integer
+sourceUrl: String
}

class MealPlan{
-diet: Diet
-targetCalories: Long
-exclusions: List<String>

+getDiet(): Diet
+setDiet(diet: Diet): void
+getTargetCalories(): Long
+setTargetCalories(targetCalories: Long): void
+getExclusions(): List<String>
+setExclusions(exclusions: List<String>): void

}

Interface HealthyFoodService {
+getDailyMeals(): List<Meal>
+getDailyMeals(meal: MealPlan): List<Meal>
}

class HealthyFoodServiceImpl {
+apiKey: String
+restTemplate: RestTemplate


}

enum Diet {
 GLUTENFREE,
 KETOGENIC,
 VEGETARIAN,
 LACTOVEGETARIAN,
 OVOVEGETARIAN,
 VEGAN,
 PESCETARIAN,
 PALEO,
 PRIMAL,
 LOWFODMAP,
 WHOLE30
}

@enduml